--- a/boilerplate/app/package.json
+++ b/boilerplate/app/package.json
@@ -1,6 +1,9 @@
 {
     "dependencies": {
-      "express": "*"
+      "express": "^4.16.4",
+      "mongodb": "^3.1.13",
+      "body-parser": "^1.18.3",
+      "cors": "^2.8.5"
     },
     "scripts": {
       "start": "node index.js"
